--- a/samples/001.yml
+++ b/samples/001.yml
@@ -8,10 +8,37 @@ media:
     external_link: null
     proximity: 100
 
+  - id: "102"
+    type: "movie"
+    uri: "movie:102"
+    title: "Tales of Kanye"
+    poster: null
+    backdrop: null
+    external_link: null
+    proximity: 100
+
   - id: "104"
     type: "movie"
     uri: "movie:104"
     title: "Parasite"
+    poster: null
+    backdrop: null
+    external_link: null
+    proximity: 100
+
+  - id: "105"
+    type: "movie"
+    uri: "movie:105"
+    title: "The Dark Knight"
+    poster: null
+    backdrop: null
+    external_link: null
+    proximity: 100
+
+  - id: "106"
+    type: "tv"
+    uri: "movie:106"
+    title: "The Kanye West TV Show"
     poster: null
     backdrop: null
     external_link: null
