Add sample image, add overlay image and improve CSS styling

--- a/samples/001.yml
+++ b/samples/001.yml
@@ -58,3 +58,4 @@ bracket_suggestions:
 frame_responses:
   "103": {url: "https://image.tmdb.org/t/p/original/6aoyUbvu0419XLKLIMoH0TkEicH.jpg"}
   "104": {url: "https://image.tmdb.org/t/p/original/8eihUxjQsJ7WvGySkVMC0EwbPAD.jpg"}
+  "102": {url: "https://picsum.photos/500"}
